<resources>
    <string name="app_name">DroidShooter</string>
    <string name="enemy_description">Enemy</string>
    <string name="crosshair_description">Crosshair</string>
    <string name="pause_button_description">Pause button</string>
    <string name="audio_button_description">Audio button</string>
    <string name="start_screen_slogan">Move the crosshair and destroy all the enemies to win the game. Good luck!</string>
    <string name="start_button">START</string>
    <string name="quit_button">QUIT</string>
    <string name="settings_button">SETTINGS</string>
    <string name="score_text">0</string>
    <string name="timer_text">0</string>
    <string name="highscore_text">Your HighScore: </string>
    <string name="resume_button">RESUME</string>
    <string name="restart_button">RESTART</string>
    <string name="menu_button">MENU</string>
    <string name="won_text">YOU WON!</string>
    <string name="lost_text">YOU LOST, TRY AGAIN!</string>
    <string name="preference_file_key">unipg.pigdm.droidshooter</string>

    <!-- Preference Titles -->
    <string name="game_header">Game</string>
    <string name="audio_header">Audio</string>
    <string name="score_header">Score</string>

    <!-- Enemies Preference -->
    <string name="crosshair_speed_title">Speed of the player\'s crosshair</string>
    <string name="enemies_speed_title">Speed of the enemies</string>
    <string name="enemies_number_title">Number of enemies</string>
    <string name="timer_title">In game timer (in seconds)</string>
    <string name="default_enemies_speed">5</string>
    <string name="default_enemies_number">10</string>
    <string name="default_timer_value">30</string>

    <!-- Audio Preference -->
    <string name="audio_title">In game audio</string>
    <string name="audio_summary_on">Audio is on</string>
    <string name="audio_summary_off">Audio is off</string>

    <!-- Score Preference -->
    <string name="score_title">In game score</string>
    <string name="score_summary_on">Score is on</string>
    <string name="score_summary_off">Score is off</string>
</resources>