<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_header">

        <EditTextPreference
            app:key="crosshair_speed"
            app:title="@string/crosshair_speed_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="enemy_speed"
            app:title="@string/enemies_speed_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="enemy_number"
            app:title="@string/enemies_number_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="game_timer"
            app:title="@string/timer_title"
            app:defaultValue="@string/default_timer_value"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">

        <SwitchPreferenceCompat
            app:key="audio"
            app:title="@string/audio_title"
            app:summaryOff="@string/audio_summary_off"
            app:summaryOn="@string/audio_summary_on" />

    </PreferenceCategory>

</PreferenceScreen>