<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="unipg.pigdm.droidshooter.controller.StartGameActivity" >


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/start_screen_slogan"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/highScore"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:text="@string/highscore_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="70dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/quitButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/quit_button" />

    <Button android:id="@+id/settingsButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/settings_button" />

</LinearLayout>