<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/endGameTextView"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/endGameScore"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/restartButton"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button" />

    <Button
        android:id="@+id/menuButton"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        app:layout_constraintBottom_toTopOf="@+id/endQuitButton" />

    <Button
        android:id="@+id/endQuitButton"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_button" />

</LinearLayout>